<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mainactivity.mvvm.home.view.HomeFragment"
        android:label="@string/bottom_nav_home">
        <action
            android:id="@+id/action_homeFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/recommendationsFragment"
        android:name="com.example.mainactivity.mvvm.recommendations.view.RecommendationsFragment"
        android:label="@string/daily_recommendations">
        <action
            android:id="@+id/action_recommendationsFragment_to_profileDetailsFragment"
            app:destination="@id/profileDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/youFragment"
        android:name="com.example.mainactivity.mvvm.you.view.YouFragment"
        android:label="@string/bottom_nav_you" />

    <fragment
        android:id="@+id/profileDetailsFragment"
        android:name="com.example.mainactivity.mvvm.profile.view.ProfileDetailsFragment"
        android:label="ProfileDetails">
        <argument
            android:name="profileId"
            app:argType="long" />
    </fragment>
</navigation>
